Added create and view blog mechanism

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "base.html" %} 
+
+{% block title %} 
+    It's me!
+{% endblock %}
+
+{% block content %} 
+    <h2>Hello there!</h2>
+    {% for post in posts %}
+        <div>
+            <p>{{post.content}}</p>
+            <p>{{post.title}}</p>
+            <p>{{post.dateCreated}}</p>
+            <a href="{% url 'viewBlog' post.id %}">View more</a>
+        </div>
+    {% endfor %}
+{% endblock %}
