--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -7,6 +7,11 @@
 {% block content %}
     <h2>Login</h2>
     <form method="POST" action="{% url 'login' %}">
+
+        {% if request.GET.next %} 
+            <input type="hidden" name="next" value="{{request.GET.next}}">
+        {% endif %}
+
         {% csrf_token %}
         {{form}}
         <button type="submit">Log in</button>
