--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,6 +8,9 @@
     {% block meta %}
     {% endblock %}
 
+    {% load static %}
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+
     <title>
         {% block title %}{% endblock %}
     </title>
