--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,16 +4,30 @@
     Login
 {% endblock %}
 
+{% block meta %}
+
+{% load static %}
+<link href="{% static 'css/loginform.css' %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
-    <h2>Login</h2>
-    <form method="POST" action="{% url 'login' %}">
-
-        {% if request.GET.next %} 
-            <input type="hidden" name="next" value="{{request.GET.next}}">
-        {% endif %}
-
-        {% csrf_token %}
-        {{form}}
-        <button type="submit">Log in</button>
-    </form>
+    <div class="wrapper-container-login">
+        <div class="login-container">
+            <h2 class="mid-text poppins">Login</h2>
+            <p class="small-text">Welcome back!</p>
+            <form method="POST" action="{% url 'login' %}">
+                {% if request.GET.next %}
+                    <input type="hidden" name="next" value="{{request.GET.next}}">
+                {% endif %}
+                {% csrf_token %}
+                {{form.as_ul}}
+                <div class="form-below">
+                    
+                    <button type="submit" class="button button--ver">Log in</button>
+                    <a href="/account/signup" class="button button--eton">Sign up</a>
+                
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
