--- a/accounts/templates/signUp.html
+++ b/accounts/templates/signUp.html
@@ -1,15 +1,34 @@
 {% extends "base.html" %} 
 
+{% block title %} 
+    Signup
+{% endblock %}
+
+{% block meta %}
+
+{% load static %}
+<link href="{% static 'css/loginform.css' %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %} 
-<h2>Sign Up</h2>
+<div class="wrapper-container-login">
+    <div class="login-container">
+        <h2 class="mid-text poppins">Sign up</h2>
+        <p class="small-text">Welcome to my blog!</p>
+        <form method="POST" action="{% url 'signUp' %}">
+            
+            {% csrf_token %}
 
-<form method="POST" action="{% url 'signUp' %}">
-    
-    {% csrf_token %}
+            {{ form.as_ul }}
 
-    {{ form }}
+            <div class="form-below">
+                    
+                <button type="submit" class="button button--ver">Sign up</button>
+                <a href="/account/login" class="button button--eton">Log in</a>
+            
+            </div>
 
-    <button type="submit">Sign Up</button>
-
-</form>
+        </form>
+    </div>
+</div>
 {% endblock %}
