--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,26 +12,38 @@
 
 {% block content %}
     <div class="clip-path">
-        <h2 class="clip-path__text">Hello! I'm Alex.</h2>
+        <h2 class="clip-path__text poppins">Hello! I'm Alex.</h2>
         <div class="hero-display">
             <p class="clip-path__text">A computer science student and an aspiring fullstack developer.</p>
             <div class="hero-display__button">
-                <a href="/profile" class="button--wicons button--eton"><p>Get to know me</p> <svg class="button__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z"/></svg></a>
+                <a href="/profile" class="button--wicons"><p>Get to know me</p> <svg class="button__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z"/></svg></a>
             </div>
         </div>
     </div>
 
     <div class="display-blog">
-        <h2 class="big-text big-text--center">The Blog</h2>
+        <h2 class="big-text big-text--center poppins">The Blog</h2>
         <p class="small-text">Sometimes we need to share our thoughts. Here are some of mine.</p>
         
-    </div>
-    {% for post in posts %}
-        <div>
-            <p>{{post.title}}</p>
-            <p>{{post.content}}</p>
-            <p>{{post.dateCreated}}</p>
-            <a href="{% url 'viewBlog' post.id %}">View more</a>
+        <div class="blog-content">
+
+            {% for post in posts %}
+            <div class="blog--card">
+                <div class="card--header">
+                    <h4 class="mid-text">{{post.title}}</h4>
+                </div>
+                <div class="card--body">
+                    <p class="smaller-text">On {{post.dateCreated}}</p>
+                    <div class="button-wrapper">
+                        <a class="button button--eton" href="{% url 'viewBlog' post.id %}">View More</a>            
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
         </div>
-    {% endfor %}
+
+        <a class="button--wicons wrapper" href="/searchblog"><p>Find out more</p><svg class="button__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z"/></svg></a>
+    </div>
+    
 {% endblock %}
