--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,6 +11,14 @@
     
 }
 
+.wrapper {
+    width: 30vw;
+    text-align: center;
+    transform: translateX(calc(50vw - 50%));
+
+    margin: 1rem;
+}
+
 .clip-path__text{
     margin: 0;
 
@@ -34,7 +42,57 @@ p.clip-path__text {
 }
 
 .display-blog {
+    margin: 0 1.25rem;
+}
+
+.blog-content {
+    display: flex;
+    margin: 1rem 0;
+
+    justify-content: center;
+}
+
+.blog--card {
+
+    width: clamp(200px, 100%, 250px);
+    height: clamp(200px, 45vh, 250px);
+
+    border-radius: 1.5rem;
+
+    box-shadow: -2px 10px 18px -4px rgba(107,107,107,0.68);
+    margin: 0 2rem;
+}
+
+.card--header {
+    background: var(--dark-purple);
+    color: white;
+    margin: 0rem;
+    padding: 0rem;
+
+    border-radius: 1.5rem 1.5rem 0 0;
+
+    padding: 0.5rem 1rem;
+
     
+}
+
+.card--body {
+    padding: 1rem;
+
+    background: var(--beige);
+}
+
+@media screen and (max-width: 1000px) {
+    .blog-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .blog--card {
+        margin: 2rem 0;
+        width: clamp(200px, 100%, 70vw);
+        height: clamp(200px, 30vh, 225px);
+    }
 }
 
 @media screen and (max-width: 400px) {
