--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -31,7 +31,7 @@
         <div class="what-i-do">
             <article class="text">
                 <h4 class="mid-text" id="mid-text-wid">What can I do?</h4>
-                <p class="small-text" id="small-text-wid">I have previous experiences working with backend web server frameworks such as Django and Express.js. I also have done several projects with HTML5, CSS, as well as JavaScript. Furthermore, I have also worked with relational databases such as PostgreSQL. I have also become an assistant lecturer for DDP1, DDP2, and Calculus 1.</p>
+                <p class="small-text" id="small-text-wid">I have previous experiences working with backend web server frameworks such as Django and Express.js. I also have done several projects with HTML5, CSS, as well as JavaScript. Furthermore, I have also worked with relational databases such as PostgreSQL. I have also become an assistant lecturer for DDP1, DDP2, and Calculus 1. I have also mentored for DDP0, as well as finalists in KOMET Kubu Raya and Prince of Physics Physics competitions in West Kalimantan.</p>
                 <button class="button--wicons" id="what-next-button"><p>What's next?</p> <svg class="button__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z"/></svg></button>
             </article>
         </div>
@@ -50,7 +50,6 @@
             <div class="project hanoi">
                 <h2 class="mid-text">Tower of Hanoi</h2>
                 <p class="smaller-text">Tower of Hanoi game, built using CSS, HTML and JS</p>
-                <a href="/play" class="button button--purple min-margin">Play</a>
                 <a href="https://github.com/whenwe177/frontend-stuff" class="min-margin button button--purple">Repo</a>
             </div>
             <div class="project f1">
